--- a/applications/processor/groovy-processor/README.adoc
+++ b/applications/processor/groovy-processor/README.adoc
@@ -5,7 +5,7 @@ A Processor that applies a Groovy script against messages.
 
 == Options
 
-The **$$groovy-processor** $$processor$$ has the following options:
+The **$$groovy-processor$$** $$processor$$ has the following options:
 
 //tag::configuration-properties[]
 //end::configuration-properties[]
