--- a/applications/sink/elasticsearch-sink/README.adoc
+++ b/applications/sink/elasticsearch-sink/README.adoc
@@ -15,16 +15,24 @@ This is provided mainly for direct invocation of the consumer.
 The **$$Elasticsearch$$** $$sink$$ has the following options:
 
 //tag::configuration-properties[]
-$$elasticsearch.consumer.async$$:: $$Indicates whether the indexing operation is async or not. By default indexing is done synchronously.$$ *($$Boolean$$, default: `$$false$$`)*
-$$elasticsearch.consumer.id$$:: $$The id of the document index.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$elasticsearch.consumer.index$$:: $$Name of the index.$$ *($$String$$, default: `$$<none>$$`)*
-$$elasticsearch.consumer.routing$$:: $$Indicates the shard to route to. If not provided, this resolves to the ID used on the document.$$ *($$String$$, default: `$$<none>$$`)*
-$$elasticsearch.consumer.timeout-seconds$$:: $$Timeout for the shard to be available. If not set, it defaults to 1 minute set by the Elasticsearch client.$$ *($$Long$$, default: `$$0$$`)*
-$$spring.elasticsearch.rest.connection-timeout$$:: $$Connection timeout.$$ *($$Duration$$, default: `$$1s$$`)*
-$$spring.elasticsearch.rest.password$$:: $$Credentials password.$$ *($$String$$, default: `$$<none>$$`)*
-$$spring.elasticsearch.rest.read-timeout$$:: $$Read timeout.$$ *($$Duration$$, default: `$$30s$$`)*
-$$spring.elasticsearch.rest.uris$$:: $$Comma-separated list of the Elasticsearch instances to use.$$ *($$List<String>$$, default: `$$[http://localhost:9200]$$`)*
-$$spring.elasticsearch.rest.username$$:: $$Credentials username.$$ *($$String$$, default: `$$<none>$$`)*
+Properties grouped by prefix:
+
+
+=== elasticsearch.consumer
+
+$$async$$:: $$Indicates whether the indexing operation is async or not. By default indexing is done synchronously.$$ *($$Boolean$$, default: `$$false$$`)*
+$$id$$:: $$The id of the document index.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$index$$:: $$Name of the index.$$ *($$String$$, default: `$$<none>$$`)*
+$$routing$$:: $$Indicates the shard to route to. If not provided, this resolves to the ID used on the document.$$ *($$String$$, default: `$$<none>$$`)*
+$$timeout-seconds$$:: $$Timeout for the shard to be available. If not set, it defaults to 1 minute set by the Elasticsearch client.$$ *($$Long$$, default: `$$0$$`)*
+
+=== spring.elasticsearch.rest
+
+$$connection-timeout$$:: $$Connection timeout.$$ *($$Duration$$, default: `$$1s$$`)*
+$$password$$:: $$Credentials password.$$ *($$String$$, default: `$$<none>$$`)*
+$$read-timeout$$:: $$Read timeout.$$ *($$Duration$$, default: `$$30s$$`)*
+$$uris$$:: $$Comma-separated list of the Elasticsearch instances to use.$$ *($$List<String>$$, default: `$$[http://localhost:9200]$$`)*
+$$username$$:: $$Credentials username.$$ *($$String$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 == Examples of running this sink
