--- a/applications/source/time-source/README.adoc
+++ b/applications/source/time-source/README.adoc
@@ -7,7 +7,7 @@ The time source will simply emit a String with the current time every so often.
 
 The **$$time$$** $$source$$ has the following options:
 
-//tag::configuration-properties[]
+//tag::configuration-properties[group=false]
 $$spring.cloud.stream.poller.cron$$:: $$Cron expression value for the Cron Trigger.$$ *($$String$$, default: `$$<none>$$`)*
 $$spring.cloud.stream.poller.fixed-delay$$:: $$Fixed delay for default poller.$$ *($$Long$$, default: `$$1000$$`)*
 $$spring.cloud.stream.poller.initial-delay$$:: $$Initial delay for periodic triggers.$$ *($$Integer$$, default: `$$0$$`)*
